Changes to background top

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #top_me {
-  background-image: url("../images/city_bck.jpg");
+  background-image: url("../images/background-top.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
