--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-.options{
-	 min-width:220px;
-}
-
-
 /*Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -35,7 +30,7 @@ padding:0;
 .banner{
 	background-image: url("../images/bck.jpg");
 	background-repeat: no-repeat;
-	background-size: 100%;
+	background-size: cover;
 /*background:#ced7df;*/
 }
 /*-- menu --*/
@@ -61,7 +56,7 @@ display:block;
   color: #323b43;
   margin: 0px 0px;
   font-size: 17px;
-  padding: 11px 104px;
+  padding: 11px 90px;
   background: #fff;
   font-weight: 600;
   text-decoration: none;
@@ -69,7 +64,7 @@ display:block;
 .nav-left a {
   font-weight: 600;
  color: #162c66;
-  text-transform: uppercase;
+ font-size: 3em;
   text-decoration: none;
 font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
@@ -662,16 +657,10 @@ color:#76b852;
 /*-- //to-top --*/
 /*-- responsive media queries --*/
 @media (max-width: 1024px){
-	.nav-left a {
-	  font-size: 8em;
-	  }
 	.nav-right ul li a {
 	  font-size: 15px;
 	  padding: 10px 70px;
 	  }
-	.nav-right ul {
-	  margin: 27px 0 0 0;
-	}
 	.nav-right ul li {
 	  line-height: 3.8em;
 	}
@@ -758,9 +747,6 @@ color:#76b852;
 	}
 	.banner-grids {
 	  margin-top: 35px;
-	}
-	.nav-left a {
-	  font-size: 7em;
 	}
 	.nav-right ul li a {
 	  font-size: 14px;
@@ -887,7 +873,7 @@ color:#76b852;
 	.copy-right p {
 	font-size: 13px;
 	}
-}
+}/*
 @media (max-width: 768px){
 	.navigation {
 	  float: left;
@@ -902,9 +888,6 @@ color:#76b852;
 	}
 	.banner-grids {
 	  margin-top: 35px;
-	}
-	.nav-left a {
-	  font-size: 7em;
 	}
 	.nav-right ul li a {
 	  font-size: 14px;
@@ -1033,9 +1016,6 @@ color:#76b852;
 	}
 }
 @media (max-width: 640px){
-	.nav-left a {
-	  font-size: 5.5em;
-	}
 	.navigation {
 	  padding-top: 0;
 	}
@@ -1187,9 +1167,6 @@ color:#76b852;
 	.navigation {
 	  padding: 0 10px;
 	}
-	.nav-left a {
-	  font-size: 4em;
-	}
 	.nav-right ul {
 	  margin: 10px 0 0 0;
 	}
@@ -1197,7 +1174,7 @@ color:#76b852;
 	  width: 81%;
 	}
 	.nav-right ul li a {
-	  padding: 8px 11px;
+	  padding: 8px 8px;
 	}
 	.nav-right ul li:nth-child(2) a ,.nav-right ul li:nth-child(4) a {
 	  padding: 8px 7px;
@@ -1206,8 +1183,14 @@ color:#76b852;
 	  padding: 8px 4px;
 	}
 
-}
-@media (max-width: 320px){
+}*/
+@media (max-width: 768px){
+	.link--kumya:hover {
+		color: #162C66;
+	}
+	.link--kumya:hover span::before {
+		width: 0%;
+	}
 .navigation {
 padding:0;
   width: 100%;
@@ -1262,12 +1245,11 @@ padding:0;
 	.banner-grids {
 	  margin-top: 20px;
 	}
+	.banner-title {
+		height: 0%;
+	}
 	.nav-left a {
 	  font-size: 3em;
-	}
-	.nav-left {
-	  width: 29.2%;
-	  float:left;
 	}
 	.banner-image img {
 	  width: 55%;
